fixed wrapping issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,62 +1,101 @@
-body, html{
+body,
+html {
     font-family: 'Varela Round', sans-serif;
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    
+
     flex-direction: column;
 }
-#navBar{
+
+#navBar {
     height: 100px;
     background-color: #1F2833;
 }
-#headerNameTag{
+
+#headerNameTag {
     color: #c5c6c0;
 }
-.headerLinks{
+
+.headerLinks {
     color: #c5c6c0;
     margin: 5px;
 }
-.headerLinks:hover{
+
+.headerLinks:hover {
     color: #c5c6c0;
 }
-#aboutMe{
+
+#aboutMe {
     background-color: rgb(168, 255, 249);
 }
-#portfolio{
+
+#portfolio {
     background-color: rgb(168, 255, 249);
 }
-#finishedProject{
+
+#finishedProject {
     background-color: rgb(90, 161, 158);
 }
-#footer{
+
+#footer {
     background-color: #1F2833;
-    height: 70px; 
+    height: 70px;
 }
-.personalInfoDivs{
+
+.personalInfoDivs {
     font-size: 20px;
     margin: 10px;
 }
-.portfolioImages{
+
+.portfolioImages {
     height: 180px;
     width: 180px;
     margin: 10px;
 }
-.portfolioSquares{
+
+.portfolioSquares {
     background-color: #c5c6c0;
     margin: 6px;
     width: 200px;
 }
-.thing{
+
+.thing {
     min-height: 430px;
     height: fit-content;
 }
+#aboutMeContainer{
+    display: flex;
+    margin-bottom: 10px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
 @media screen and (max-width: 360px) {
-    .profileImage{
+    .profileImage {
         height: 200px;
         width: 200px;
-    } 
+    }
 }
-.meText{
+
+@media screen and (max-width: 769px) {
+    #aboutMeContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 10px;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+.meText {
     font-size: 17px;
 }
